# workflows

./: CMakeLists.txt  Makefile  main.c
.github/workflows/: coverage-test.yml  coverage.yml  test-test.yml  test.yml
include/: lib.h
src/: lib.c
test/: main.c
